# csc317-final-project

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
db/migrations/: 20250504151239_inital.sql
src/csc317_final_project/client/: __main__.py  wonderful_gui.py
src/csc317_final_project/misc/: cli_uploader.py
src/csc317_final_project/server/: __main__.py  db.py  ffmpeg.py  fs.py  quality.py
